--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "nature_beauty",
+  "name": "nauturebeauty",
   "version": "1.0.0",
-  "description": "Build system backend",
+  "description": "Learning node, express and mongoDB",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
-  "resolve": {
-    "extensions": [
-      ".js",
-      ".ts"
-    ]
-  },
-  "author": "",
+  "author": "Trunks2001",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-mongo-sanitize": "^2.2.0",
-    "googleapis": "^118.0.0",
-    "helmet": "^7.0.0",
-    "html-to-react": "^1.5.1",
-    "html-to-text": "^9.0.5",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.1.0",
-    "morgan": "^1.10.0",
-    "nodemailer": "^6.9.1",
-    "path": "^0.12.7",
-    "slugify": "^1.6.6",
-    "validator": "^13.9.0",
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "express-mongo-sanitize": "^1.3.2",
+    "express-rate-limit": "^3.5.0",
+    "helmet": "^3.16.0",
+    "hpp": "^0.2.2",
+    "html-to-text": "^5.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.5.2",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "nodemailer": "^6.1.1",
+    "pug": "^2.0.3",
+    "sharp": "^0.22.1",
+    "slugify": "^1.3.4",
+    "stripe": "^7.0.0",
+    "validator": "^10.11.0",
     "xss-clean": "^0.1.1"
   },
-  "type": "module",
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.3",
-    "@types/nodemailer": "^6.4.7",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
@@ -48,8 +49,10 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "nodemon": "^2.0.22",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.17.0"
+  },
+  "engines": {
+    "node": "^10"
   }
 }
