--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -34,6 +34,8 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.29.12",
+    "@tanstack/react-query-devtools": "^4.29.12",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.6",
     "eslint-config-airbnb": "^19.0.4",
@@ -41,6 +43,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "firebase": "^9.21.0",
+    "html-react-parser": "^3.0.16",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "npm": "^9.6.6",
@@ -49,7 +52,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
-    "react-html-parser": "^2.0.2",
+    "react-query-devtools": "^2.6.3",
     "react-quill": "^2.0.0-beta.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
@@ -64,6 +67,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.29.9",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0-beta.0",
