--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -35,7 +35,8 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
-    "@mui/material": "^5.13.5",
+    "@mui/icons-material": "^5.14.0",
+    "@mui/material": "^5.14.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-query-devtools": "^4.29.12",
@@ -56,6 +57,7 @@
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-query-devtools": "^2.6.3",
     "react-quill": "^2.0.0-beta.4",
     "react-redux": "^8.0.5",
